# solarb-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose.yml  goto.sh  programs.toml
src/: byte_reader.rs  cache.rs  config.rs  constants.rs  global.rs  inserter.rs  io.rs  main.rs  math.rs  metric.rs  pool_index.rs  safe_math.rs  transaction.rs  util.rs
src/arb/: ata_worker.rs  container.rs  hop.rs  mod.rs  pool_type.rs  processor.rs  queue_sender.rs  route.rs  sender.rs  swap_math.rs  typedefs.rs
src/arb/loader/: meteora.rs  mod.rs  pumpfun.rs  raydium.rs  solfi.rs  vertigo.rs  whirlpool.rs
src/arb/optimization/: brent_method.rs  golden_section.rs  mod.rs  ternary_search.rs
src/dex/: mod.rs
src/dex/meteora/: mod.rs
src/dex/pumpfun/: mod.rs  pda.rs  quote.rs  reader.rs  typedefs.rs  util.rs
src/dex/raydium/: mod.rs
src/dex/solfi/: instruction.rs  mod.rs
src/dex/vertigo/: mod.rs  pda.rs  util.rs
src/dex/whirlpool/: mod.rs  util.rs
src/instructions/: cu.rs  mod.rs  token.rs
src/instructions/aggregator/: constants.rs  meteora.rs  mod.rs  pumpfun.rs  raydium.rs  solfi.rs  vertigo.rs  whirlpool.rs
src/instructions/flashloan/: kamino.rs  (+1 more)
src/onchain/: mod.rs  send.rs
src/polling/: blockhash.rs  mod.rs
src/streaming/: blockhash.rs  commander.rs  global_data.rs  grpc.rs  mod.rs  monitor.rs  parser.rs  polling.rs  pool_loader.rs  price.rs  processor.rs  typedefs.rs  updater.rs  util.rs  watcher.rs
src/watcher/: account_data_type.rs  constants.rs  lookuptable.rs  mod.rs  parser.rs  processor.rs  transaction.rs
(+75 files in other folders)
