[package]
name = "solarb-client"
version = "0.1.0"
edition = "2024"

[features]
devnet = []

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
anchor-spl = "0.29.0"
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
commons = { git = "https://github.com/thanhan7914/dlmm-sdk", branch = "dev", package = "commons" }
dlmm_interface = { git = "https://github.com/thanhan7914/dlmm-sdk", branch = "dev", package = "dlmm_interface" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "=0.8.23"
futures = "0.3"
spl-token = "4.0"
spl-associated-token-account = "3.0"
bs58 = "0.5.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
lazy_static = "1.5"
once_cell = "1.21.3"
dashmap = "6.1.0"
base64 = "0.22.1"
yellowstone-grpc-client = "1.15.4"
yellowstone-grpc-proto = "1.14.2"
tonic = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-stream = "0.1"
parking_lot = "0.12"
ahash = "0.8"
arc-swap = "1.6"
notify = { version = "8.0", optional = true }
rayon = "1.10.0"
ruint = "1.3.0"
num-traits = "0.2.19"
uint = { git = "https://github.com/thanhan7914/uint", branch = "main" }
ethnum = { version = "^1.1" }
rand = "0.8"
serde_json = "1.0"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
crossbeam = "0.8"
lockfree = "0.5"
borsh = "0.10.3"
fastrand = "2"